# MyTaxReturn2025

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  security.py
backend/app/models/: __init__.py  api_key.py  document.py  extracted_data.py  filing_session.py  tax_return.py
backend/app/prompts/: form1099_extraction.py  w2_extraction.py
backend/app/routers/: api_keys.py  documents.py  extraction.py  filing.py  tax_return.py
backend/app/schemas/: api_key.py  document.py  filing.py  tax_forms.py  tax_return.py
backend/app/services/: document_parser.py  filing_agent.py  llm_factory.py  mcp_client.py  tax_aggregator.py
frontend/: package-lock.json  package.json
frontend/messages/: en.json  zh-CN.json  zh-TW.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/calculate/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/filing/: page.tsx
frontend/src/app/review/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/documents/: TransactionTable.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/settings/: language-toggle.tsx
frontend/src/i18n/: request.ts
frontend/src/lib/: api.ts
scripts/: dev.sh  setup.sh
